...
                                    <frame key="frameInset" width="375" height="37"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S7Q-Wp-Htn">
                                            <frame key="frameInset" minX="257" width="110" height="36"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <state key="normal" title="Nutritional Info"/>
                                            <connections>
                                                <action selector="buttonTap:" destination="HSu-me-lxn" eventType="touchUpInside" id="okE-j9-1kU"/>
                                            </connections>
                                        </button>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FRL-ca-DSh">
                                            <frame key="frameInset" minX="33" minY="7" width="216" height="21"/>
...
                            <outlet property="dataSource" destination="pel-2Q-5tJ" id="YBR-MI-7MM"/>
                            <outlet property="delegate" destination="pel-2Q-5tJ" id="bqZ-Bg-0LC"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" id="bAv-7t-Qzp">
                        <barButtonItem key="rightBarButtonItem" title="All Food Items" id="4KQ-GJ-ghY">
                            <connections>
                                <segue destination="zt8-BK-DSK" kind="show" identifier="totalItems" id="t8h-Vn-FDI"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                                <color key="textColor" red="0.3057965614" green="0.77568717279999999" blue="0.016848361280000002" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R54-1q-9OY">
                                <frame key="frameInset" minX="27" minY="288" width="82" height="46"/>
                                <fontDescription key="fontDescription" name="DIN-BlackAlternate" family="DIN" pointSize="22"/>
                                <state key="normal" title="Eat out">
                                    <color key="titleColor" red="0.6588235294" green="0.6588235294" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <segue destination="pel-2Q-5tJ" kind="show" id="P0b-kA-1FY"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v3M-Pq-M1x">
                                <frame key="frameInset" minX="27" minY="400" width="136" height="38"/>
                                <fontDescription key="fontDescription" name="DIN-BlackAlternate" family="DIN" pointSize="22"/>
                                <state key="normal" title="Dine In">
                                    <color key="titleColor" red="0.6588235294" green="0.6588235294" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <segue destination="ljq-Hl-J0Z" kind="show" id="oA1-pT-Qwc"/>
                                </connections>
                            </button>
...
                                    <outlet property="delegate" destination="ljq-Hl-J0Z" id="pSB-Dj-sqE"/>
                                </connections>
                            </collectionView>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HDY-Or-BEc">
                                <frame key="frameInset" minX="217" minY="619" width="158" height="48"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Search"/>
                                <connections>
                                    <action selector="RecipeSearch:" destination="ljq-Hl-J0Z" eventType="touchUpInside" id="NTd-qj-Dqm"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kaw-uj-aH6">
                                <frame key="frameInset" minX="26" minY="581" width="83" height="66"/>
...
