...
        WheatBox.delegate = self
        PeanutBox.delegate = self
     
        
        self.data = self.data.sorted(by: {$0.Calories < $1.Calories})

        pickerNames = ["Low Calories", "Low Carb", "Low Fat","Low Sodium","High Protein","None"]
        pickerView.delegate = self
        pickerView.dataSource = self
        
        itemTable.reloadData()
    }
    
...
            
            if newData[row].Restuarant == "PizzaHut"
            {  let alert = UIAlertController(
                title: newData[row].Name,
                message: "Calories:  \(newData[row].Calories)/slice\nFats:  \(newData[row].Fats)\nCarbs:  \(newData[row].Carbs)\nProtein:  \(newData[row].Protein)\nSodium:  \(newData[row].Sodium)",
                preferredStyle: .alert)
                alert.addAction(UIAlertAction(title: "Gotcha!", style: UIAlertActionStyle.default, handler: { (test) -> Void in
                    self.dismiss(animated: true, completion: nil)
                }))
                
                self.present(
                    alert,
                    animated: true,
...
