...
        }
    }
    override func viewDidLoad() {
        super.viewDidLoad()
        // Do any additional setup after loading the view, typically from a nib.
        // Restaurants
        names = ["Bamboo Garden", "Big Smoke Burger", "Bubble World", "Club Ilia", "Donair Town", "Gawon Korean", "Guadalupe Handmade Burritos", "Higher Grounds Coffee Shop", "Highland Pub", "Ichibankan Express SFU", "Nature Garden", "Nester's Market", "Pizza Hut", "Plum GAden Noodle House", "Poke Bar", "Quesada Burritos and Tacos", "Renaisance Coffee", "Spicy STone", "Starbucks Cornerstone", "Sta
        
        
        // Latitudes, Longitudes coordinates of each restaurant  
        coordinates = [[49.277839, -122.912081],
            [49.277867, -122.912372],
            [49.278819, -122.919041],
...
